--- a/src/app/account/register.component.html
+++ b/src/app/account/register.component.html
@@ -4,7 +4,8 @@
         <div class="form-row">
             <div class="form-group col">
                 <label>Title</label>
-                <select formControlName="title" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.title.errors }">
+                <select formControlName="title" class="form-control field"
+                    [ngClass]="{ 'is-invalid': submitted && f.title.errors }">
                     <option value=""></option>
                     <option value="Mr">Mr</option>
                     <option value="Mrs">Mrs</option>
@@ -17,14 +18,16 @@
             </div>
             <div class="form-group col-5">
                 <label>First Name</label>
-                <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                <input type="text" formControlName="firstName" class="form-control  field"
+                    [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
                 <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
                     <div *ngIf="f.firstName.errors.required">First Name is required</div>
                 </div>
             </div>
             <div class="form-group col-5">
                 <label>Last Name</label>
-                <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                <input type="text" formControlName="lastName" class="form-control  field"
+                    [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
                 <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
                     <div *ngIf="f.lastName.errors.required">Last Name is required</div>
                 </div>
@@ -32,7 +35,8 @@
         </div>
         <div class="form-group">
             <label>Email</label>
-            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+            <input type="text" formControlName="email" class="form-control  field"
+                [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
             <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                 <div *ngIf="f.email.errors.required">Email is required</div>
                 <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
@@ -41,7 +45,8 @@
         <div class="form-row">
             <div class="form-group col">
                 <label>Password</label>
-                <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                <input type="password" formControlName="password" class="form-control  field"
+                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
                     <div *ngIf="f.password.errors.required">Password is required</div>
                     <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
@@ -49,7 +54,8 @@
             </div>
             <div class="form-group col">
                 <label>Confirm Password</label>
-                <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
+                <input type="password" formControlName="confirmPassword" class="form-control  field"
+                    [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
                 <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
                     <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
                     <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
@@ -57,12 +63,13 @@
             </div>
         </div>
         <div class="form-group form-check">
-            <input type="checkbox" formControlName="acceptTerms" id="acceptTerms" class="form-check-input" [ngClass]="{ 'is-invalid': submitted && f.acceptTerms.errors }" />
+            <input type="checkbox" formControlName="acceptTerms" id="acceptTerms" class="form-check-input"
+                [ngClass]="{ 'is-invalid': submitted && f.acceptTerms.errors }" />
             <label for="acceptTerms" class="form-check-label">Accept Terms & Conditions</label>
             <div *ngIf="submitted && f.acceptTerms.errors" class="invalid-feedback">Accept Ts & Cs is required</div>
         </div>
         <div class="form-group">
-            <button [disabled]="loading" class="btn btn-primary">
+            <button [disabled]="loading" class="btn btn-primary  field">
                 <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                 Register
             </button>
