--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,11 @@
     <!-- main nav -->
     <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="account">
         <div class="navbar-nav">
-            <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-item nav-link">Home</a>
+            <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"
+                class="nav-item nav-link">Home</a>
             <a routerLink="/profile" routerLinkActive="active" class="nav-item nav-link">Profile</a>
-            <a *ngIf="account.role === Role.Admin" routerLink="/admin" routerLinkActive="active" class="nav-item nav-link">Admin</a>
+            <a *ngIf="account.role === Role.Admin" routerLink="/admin" routerLinkActive="active"
+                class="nav-item nav-link">Admin</a>
             <a (click)="logout()" class="nav-item nav-link">Logout</a>
         </div>
     </nav>
@@ -14,6 +16,9 @@
 
     <!-- global alert -->
     <alert></alert>
+
+    <!--Tour Template-->
+    <!-- <tour-step-template></tour-step-template> -->
 
     <!-- main router outlet -->
     <router-outlet></router-outlet>
