--- a/src/styles.less
+++ b/src/styles.less
@@ -17,3 +17,5 @@ a { cursor: pointer; }
     text-align: center;
     box-sizing: content-box;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
