--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,11 @@
     <alert></alert>
 
     <!--Tour Template-->
-    <!-- <tour-step-template></tour-step-template> -->
+    <tour-step-template>
+
+
+
+    </tour-step-template>
 
     <!-- main router outlet -->
     <router-outlet></router-outlet>
