--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,5 +2,20 @@
     <div class="container">
         <h1>Hi {{account.firstName}}!</h1>
         <p>You're logged in with Angular 10 & JWT!!</p>
+        <div>
+            <P tourAnchor="start-tour">
+
+            </P>
+            <P tourAnchor="start-tour2">
+
+            </P>
+            <P tourAnchor="start-tour3">
+
+            </P>
+
+        </div>
+
+
+
     </div>
 </div>
